# majkraft

./: .gitignore  .gitmodules  CMakeLists.txt
src/: camera.c  camera.h  input.c  input.h  main.c  shader.c  shader.h  texture.c  texture.h
